--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/icon.png">
+  <meta name="description" content="Looking for jobs">
+  <meta name="author" content="862315316">
 
-  <title>John Doe - Business Administration</title>
+  <title>Tina Tran - Psychologist</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Tina Tran</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/tinatran.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Tina Tran
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Psychology🛋</div>
+        <p class="lead mb-4">One of the main focuses of the psychology major is to examine human behavior and mental process. It is not an easy task as each person is very different yet similar to another. My main focus with psychology is to figure out what makes a person think or behave the way they do. So far, I have been conducting study and research, as well as personal observation. It is very interesting to learn how each of us has our own consciousness to make a decision similar or different from another person. As for reasonings to why one would make a certain decision for a situation, most people have similar reasonings that include their emotions like their sympathy or empathy towards the situation.<br><br>
 
-        Enter bio here<br><br>
+        The requirements to declare a Psychology major or to move into upper division if you were previously accepted into Psychology major include completing all lower division classes such as PYSC 001, PSYC 002, PSYC 011, and PSYC 012. Other lower divisions outside of PSYC classes include one biological science class, one math class, two additional natural sciences or math classes, and one physical science class. All lower division courses must be completed by the end of sophomore year or else will not be able to continue with the major with the exception of the non-psychology majors switched into the major. After completing lower division, upper division requires courses in PSYC 110 or CBNS 106, PSYC 132 or PSYC 134, PSYC 140, PSYC 150, PSYC 160 or PSYC 161 or PSYC 162 or PSYC 163 and four other PSYC elective classes with course numbers be 190+. Minimum of 2.0 major and cumulative GPA is required to graduate.<br><br>
 
-        Enter bio here
+        A side passion of mine beside helping others is dancing. I grew up in a family where negative emotions weren’t allow because of our culture. I ended up with anger issue and depression because I would always have to hold in those emotions and bottle them up til I couldn’t anymore. Fortunately for me, my friend introduced me to dance. It was the only way I could release those negative emotions was through dancing. Dance was the reason why I wanted to become a psychologist. I love be able to express myself and feel all of my emotion through dance which inspired me to help other to be able to open up to themselves and accept their emotions. Dance is like my psychologist, it helps guide me to understand my emotions without any long explanations. I want to be like “dance” to my patient, to help guide them without overwhelm them with their emotions. I believe that no one is ever overreacting because emotions are emotions and there’s always a reason behind every person’s reaction or action. As a psychologist, my goal is to figure the reason and help my patient navigate through it so they can better understand themself and how they can deal with these reactions in the future.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://linkedin.com/tina-tran-240768250">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/mt4215">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://instagram.com/mthee.nim">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:mitranle.17@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,45 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Cafeteria Worker</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://gabrielino.sgusd.k12.ca.us/">Gabrielino High School</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Prepare food in a timely manner<br> 
+              • Organize lunches for students<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">May 2019 - Febuary 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Housing Student Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://housing.ucr.edu/">UCR Housing Service</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Process mails and packages<br>
+              • Process move in and move out<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">September 2021 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Dance Leader</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://gabrielino.sgusd.k12.ca.us/apps/pages/index.jsp?uREC_ID=1735059&type=d&pREC_ID=2105819">Tongva Legacy Dance Club</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
-
-          </p>
+            • Teaches dance workshop<br>
+            • Create choreography<br>
+            • Provide excelent leadership skill<br>
+            </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">August 2019 - June 2021</span>
           </div>
         </div>
 
@@ -152,33 +149,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Psychology</div>
+            <div>BA in Psychology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2021 - Present</span>
           </div>
         </div>
 
@@ -190,16 +165,19 @@
     <section class="resume-section p-1 p-lg-5 d-flex align-items-center" id="portfolio">
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
-        <center>
-            <img src="img/image2.jpeg" width="500px">
-        </center>
+          <center>
+            <img src="img/IMG_6460.png" width="500px">
+            <img src="img/IMG_6461.jpg" width="500px"><br>
+            <img src="img/IMG_6462.jpg" width="500px">
+            <img src="img/oof.jpg" width="500px"><br>
+          </center> 
       </div>
     </section>
 
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Tina Tran</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
